force-app/main/default/objects/CloWMSBillBank__c/CloWMSBillBank__c.object-meta.xml
<CustomObject>
    <label>WMS Bill+Bank</label>
    <nameField>
        <displayFormat>WBB-{000000}</displayFormat>
        <label>WMS BILL+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WMS Bill+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>