force-app/main/default/objects/CloWMSBillBank__c/fields/BankTransactionID__c.field-meta.xml
<CustomField>
    <fullName>BankTransactionID__c</fullName>
    <label>BANK TRANSACTION ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipName>CloWMSBillID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>