force-app/main/default/objects/CloWMSBillBank__c/fields/CloWMSBillID__c.field-meta.xml
<CustomField>
    <fullName>CloWMSBillID__c</fullName>
    <label>WMS BILL ID</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipName>CloWMSBillBank</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>