force-app/main/default/objects/CloWMSBillBank__c/fields/UnreceivedBalanceOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingUSD__c</fullName>
    <formula>CloWMSBillID__r.UnreceivedBalanceUSD__c</formula>
    <label>UNRECEIVED BALANCE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>