force-app/main/default/objects/CloWMSBillBank__c/fields/WMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>WMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>WMS UNPAID BAL OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>